# Observer

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  image.yml
a3s-observer-collector/: Cargo.toml  build.rs
a3s-observer-collector/src/: legacy.rs  main.rs
a3s-observer-common/: Cargo.toml
a3s-observer-common/src/: lib.rs
a3s-observer-common/tests/: legacy_exec_contract.rs
a3s-observer-ebpf/: Cargo.toml
a3s-observer-ebpf-legacy/: Cargo.toml
a3s-observer-ebpf-legacy/src/: main.rs  probes.c
a3s-observer-ebpf/src/: main.rs
deploy/: Dockerfile  daemonset.yaml  otel-collector.yaml
diagnostics/: README-container-bpf-diagnostics.md  bpf-syscall-probe.c  run-container-bpf-diagnostics.sh  run-passive-container-check.sh
docs/: enforcement.md  linux-4.19-hotfix-target-install.md
docs/superpowers/plans/: 2026-07-15-linux-4.19-observer-hotfix.md
docs/superpowers/specs/: 2026-07-15-container-bpf-diagnostics-design.md  2026-07-15-linux-4.19-observer-hotfix-design.md  2026-07-23-uos20-arm64-observer-main-integration-design.md
poc/: README.md  exec.bt  sni.bt
scripts/: build-container-bpf-diagnostics.sh  build-legacy-bpf-object.sh  build-uos20-arm64-hotfix.sh  example-controller.py  run-target-hotfix2-smoke.sh  run-target-hotfix3-smoke.sh  smoke.sh  test-build-uos20-arm64-hotfix.mjs  test-verify-legacy-bpf-object.mjs  validate-enforcement.sh  verify-legacy-bpf-object.mjs  verify-uos20-legacy.mjs
src/: lib.rs  model.rs  policy.rs  traits.rs  workload.rs
tests/: workload_contract.rs
